Changed to use PlayerDataManager class