@@ -1,6 +1,6 @@
 package com.probreezer.multiFuse.Game;
 
-import com.probreezer.multiFuse.Blocks.TeamBlocks;
+import com.probreezer.multiFuse.Blocks.BlockManager;
 import com.probreezer.multiFuse.MultiFuse;
 import com.probreezer.multiFuse.Utils.Coordinates;
 import org.bukkit.Bukkit;
@@ -10,11 +10,12 @@ import org.bukkit.Particle;
 import org.bukkit.block.Block;
 import org.bukkit.entity.Player;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class Fuse {
-    public final TeamBlocks teamBlocks;
+    public final Material fuseBlock;
     private final MultiFuse plugin;
+    private final Location hologramLocation;
     public int id;
     public String colour;
     public float health;
@@ -23,12 +24,13 @@ public class Fuse {
     public boolean respawned;
     public Coordinates coordinates;
     public Block block;
-    private Location hologramLocation;
+    private FuseManager fuseManager;
 
 
-    public Fuse(MultiFuse plugin, TeamBlocks teamBlocks, int id, String colour, int health, Coordinates coordinates) {
+    public Fuse(MultiFuse plugin, FuseManager fuseManager, int id, String colour, int health, Coordinates coordinates) {
         this.plugin = plugin;
-        this.teamBlocks = teamBlocks;
+        this.fuseManager = fuseManager;
+        this.fuseBlock = BlockManager.getTeamFuseBlock(colour);
         this.id = id;
         this.colour = colour;
         this.health = health;
@@ -41,13 +43,21 @@ public class Fuse {
         createFuse(colour, coordinates);
     }
 
+    public String getTeamColour() {
+        return this.colour;
+    }
+
+    public int getHealth() {
+        return (int) this.health;
+    }
+
     private void createFuse(String colour, Coordinates coordinates) {
         plugin.getLogger().info("Creating fuse for team " + colour);
-        var fuse = teamBlocks.blockMaterial;
+        var fuse = this.fuseBlock;
         var world = plugin.getServer().getWorlds().getFirst();
         this.block = world.getBlockAt(coordinates.x, coordinates.y, coordinates.z);
         this.block.setType(fuse);
-        this.plugin.hologramManager.addHologram(colour + id, Arrays.asList("&lFuse " + id), hologramLocation);
+        this.plugin.hologramManager.addHologram(colour + id, List.of("&lFuse " + id), hologramLocation);
     }
 
     private int getPercentageHealth() {
@@ -69,7 +79,7 @@ public class Fuse {
         if (this.health <= 0) {
             if (!this.respawned) {
                 this.block.setType(Material.valueOf(this.colour.toUpperCase() + "_STAINED_GLASS"));
-                this.block.getWorld().spawnParticle(Particle.ELECTRIC_SPARK, location, 20, 0.2, 0.2, 0.2, 0.05);
+                this.block.getWorld().spawnParticle(Particle.ELECTRIC_SPARK, location, 100, 0.5, 0.5, 0.5, 0.1);
             } else {
                 this.block.setType(Material.AIR);
                 this.block.getWorld().spawnParticle(Particle.EXPLOSION, location, 20, 0.2, 0.2, 0.2, 0.05);
@@ -78,9 +88,7 @@ public class Fuse {
 
         this.percentageHealth = getPercentageHealth();
 
-        var team = plugin.game.teamManager.getTeam(this.colour);
-        var totalTeamFuseHealth = team.fuseManager.getTeamFuseHealth();
-
+        var totalTeamFuseHealth = fuseManager.getTeamFuseHealth();
         if (totalTeamFuseHealth <= 0) {
             plugin.game.endGame(colour);
         }
@@ -103,7 +111,7 @@ public class Fuse {
         if (this.health > 0 || this.respawned) return;
 
         player.getInventory().getItemInMainHand().setAmount(player.getInventory().getItemInMainHand().getAmount() - 1);
-        this.block.setType(teamBlocks.blockMaterial);
+        this.block.setType(this.fuseBlock);
         this.health = this.maxHealth / 4;
         this.percentageHealth = getPercentageHealth();
         this.respawned = true;
